feat: 更新表单、分割线组件属性

--- a/formily/antd/src/components/Divider/styles.less
+++ b/formily/antd/src/components/Divider/styles.less
@@ -1,4 +1,6 @@
 .custom-divider {
+  border-color: var(--dn-brand-color);
+  color: var(--dn-brand-color);
   &.ant-divider-horizontal.ant-divider-with-text {
     &::before {
       border-top-width: 4px;
