styles: 修改分割线样式

--- a/formily/antd/src/components/Divider/styles.less
+++ b/formily/antd/src/components/Divider/styles.less
@@ -1,5 +1,5 @@
 .custom-divider {
-  border-color: var(--dn-brand-color);
+  border-color: var(--dn-brand-color) !important;
   color: var(--dn-brand-color);
   &.ant-divider-horizontal.ant-divider-with-text {
     &::before {
