styles: 修改分割线样式权重

--- a/formily/antd/src/components/Divider/styles.less
+++ b/formily/antd/src/components/Divider/styles.less
@@ -1,8 +1,7 @@
 .custom-divider {
   border-color: var(--dn-brand-color) !important;
   color: var(--dn-brand-color) !important;
-  &.ant-divider-horizontal
-  .ant-divider-with-text {
+  &.ant-divider-horizontal.ant-divider-with-text {
     &::before {
       border-top-width: 4px;
     }
